FIX: Page plus grande sur grosse réso à cause d'un overflow manquant

--- a/src/components/WorkSpace/style.scss
+++ b/src/components/WorkSpace/style.scss
@@ -336,6 +336,7 @@
             z-index: 1000;
             right: 0;
             width: 55px;
+            overflow: hidden;
         }
     }
 }
